# protokoll2nextcloud

./: README.md  poetry.toml  pyproject.toml
.github/workflows/: release.yml
application/: main.py
protokoll2nextcloud/: argument_class.py  mail.py  messages.py
