[tool.poetry]
name = "protokoll2nextcloud"
version = "0.1.0"
description = ""
license = "GPL-3.0-only"
authors = ["Florian Katerndhal <florian@katerndahl.com>"]
readme = "README.md"
packages = [{include = "protokoll2nextcloud"}]
exclude = ["application/main.py"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandoc = "^2.2"
SQLAlchemy = "^1.4.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
