[tool.poetry]
name = "protokoll2nextcloud"
version = "0.1.0"
description = "Query attachments from E-Mails and upload them to a Nextcloud instance"
license = "GPL-3.0-only"
authors = ["Florian Katerndhal <florian@katerndahl.com>"]
readme = "README.md"
repository = "https://github.com/Florian-Katerndahl/protokoll2nextcloud"
packages = [{include = "protokoll2nextcloud"}]
exclude = ["application/main.py"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandoc = "^2.2"
regex = "^2022.9.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
